examples/test/testpolicy16448.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16448
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key33: value47
      key20: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value4
          key45: value44
      podSelector:
        matchLabels:
          key11: value11
          key24: value24
